--- a/GUI/Views/MainWindow.axaml
+++ b/GUI/Views/MainWindow.axaml
@@ -2,7 +2,6 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:views="clr-namespace:BoH.GUI.Views"
         x:Class="BoH.GUI.Views.MainWindow"
-        Title="Battle of Hyperborea"
-        Width="800" Height="600">
+        Title="Battle of Hyperborea">
     <views:GameBoardView />
 </Window>
