--- a/GUI/Views/MainWindow.axaml
+++ b/GUI/Views/MainWindow.axaml
@@ -1,7 +1,10 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:vm="clr-namespace:BoH.GUI.ViewModels"
-        xmlns:views="clr-namespace:BoH.GUI.Views"
+        xmlns:vm="using:BoH.GUI.ViewModels"
+        xmlns:views="using:BoH.GUI.Views"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="BoH.GUI.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
         Title="Battle of Hyperborea">
