--- a/GUI/Views/CellView.axaml
+++ b/GUI/Views/CellView.axaml
@@ -3,5 +3,16 @@
              xmlns:vm="clr-namespace:BoH.GUI.ViewModels"
              x:Class="BoH.GUI.Views.CellView"
              x:DataType="vm:CellViewModel">
-    <Button Content="{Binding Display}" />
+    <Button>
+        <Button.Styles>
+            <Style Selector="Button">
+                <Setter Property="Background" Value="{Binding IsAccessible, Converter={StaticResource BooleanToBrushConverter}}" />
+                <Setter Property="Foreground" Value="Black" />
+            </Style>
+        </Button.Styles>
+        <Button.Content>
+            <TextBlock Text="{Binding Content, Converter={StaticResource ContentToDisplayConverter}}" />
+        </Button.Content>
+    </Button>
 </UserControl>
+
