--- a/GUI/Views/GameBoardView.axaml
+++ b/GUI/Views/GameBoardView.axaml
@@ -1,19 +1,25 @@
 <UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:vm="clr-namespace:BoH.GUI.ViewModels"
-             xmlns:views="clr-namespace:BoH.GUI.Views"
+             xmlns:local="clr-namespace:BoH.GUI.Views"
              x:Class="BoH.GUI.Views.GameBoardView"
-             x:DataType="vm:GameBoardViewModel" >
+             x:DataType="vm:GameBoardViewModel">
     <Grid>
+        <!-- Основная панель для игрового поля -->
         <ItemsControl ItemsSource="{Binding Cells}">
-            <ItemsControl.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <UniformGrid Rows="{Binding RowCount}" Columns="{Binding ColumnCount}" />
-                </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
             <ItemsControl.ItemTemplate>
-                <DataTemplate DataType="vm:CellViewModel">
-                    <views:CellView />
+                <DataTemplate>
+                    <StackPanel>
+                        <!-- Привязка каждой строки из Cells -->
+                        <ItemsControl ItemsSource="{Binding}">
+                            <ItemsControl.ItemTemplate>
+                                <DataTemplate>
+                                    <!-- Использование CellView для отображения каждой клетки -->
+                                    <local:CellView />
+                                </DataTemplate>
+                            </ItemsControl.ItemTemplate>
+                        </ItemsControl>
+                    </StackPanel>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
         </ItemsControl>
