Changed: CellViewModel's constructor now uses coordinates as a parameter
Added: HandleClick() method, DebugCommandClick() method for testing purposes

--- a/GUI/Views/GameBoard/CellView.axaml
+++ b/GUI/Views/GameBoard/CellView.axaml
@@ -9,6 +9,6 @@
              x:DataType="vm:CellViewModel">
 
 
-    <Button Content="{Binding Cell.Icon}" />
+    <Button Content="{Binding Cell.Icon}" Command="{Binding HandleClick}" />
 
 </UserControl>
