Added: Layout out of game board, battle log, selected unit info and abilities list. Clicking on a game board cell sends a signal

--- a/GUI/Views/GameBoard/GameBoardView.axaml
+++ b/GUI/Views/GameBoard/GameBoardView.axaml
@@ -21,7 +21,7 @@
 
         <ItemsControl.ItemTemplate>
             <DataTemplate>
-                <views:CellView/>
+                <views:CellView Margin="0" />
             </DataTemplate>
         </ItemsControl.ItemTemplate>
     </ItemsControl>
