Progress: game board is able to handle movement and update the GUI

--- a/GUI/Views/GameBoard/CellView.axaml
+++ b/GUI/Views/GameBoard/CellView.axaml
@@ -14,7 +14,7 @@
             VerticalContentAlignment="Center"
             Padding="0"
             FontSize="36">
-        <TextBlock Text="{Binding Cell.Icon}"
+        <TextBlock Text="{Binding Icon}"
                    HorizontalAlignment="Center"
                    VerticalAlignment="Center"
                    TextAlignment="Center" />
