--- a/GUI/Views/AbilitiesView.axaml
+++ b/GUI/Views/AbilitiesView.axaml
@@ -12,10 +12,16 @@
              Width="200" Margin="5">
         <ListBox.ItemTemplate>
             <DataTemplate>
-                <TextBlock Text="{Binding Name}" 
-                           HorizontalAlignment="Center"
-                           VerticalAlignment="Center" 
-                           FontSize="16"/>
+                <StackPanel Orientation="Vertical" Margin="0,0,0,5">
+                    <TextBlock Text="{Binding Name}" 
+                               HorizontalAlignment="Center"
+                               FontWeight="Bold"
+                               FontSize="16"/>
+                    <TextBlock Text="{Binding Description}" 
+                               HorizontalAlignment="Center"
+                               TextWrapping="Wrap"
+                               FontSize="12"/>
+                </StackPanel>
             </DataTemplate>
         </ListBox.ItemTemplate>
     </ListBox>
