--- a/GUI/Views/MainWindow.axaml
+++ b/GUI/Views/MainWindow.axaml
@@ -18,7 +18,8 @@
     </Grid.RowDefinitions>
 
     <!-- Игровое поле в левом верхнем углу -->
-    <views:GameBoardView DataContext="{Binding GameBoardVm}" Grid.Column="0" Grid.Row="0" Margin="5"/>
+    <views:GameBoardView DataContext="{Binding GameBoardVm}" Grid.Column="0" Grid.Row="0" Margin="25"/>
+    
     
     <!-- Панель для информации о юните и активных способностях справа от игрового поля -->
     <StackPanel Grid.Column="1" Grid.Row="0" Margin="0" Orientation="Vertical" Spacing="0">
@@ -32,6 +33,12 @@
         <StackPanel>
           <TextBlock Text="Активные способности" FontWeight="Bold" />
           <views:AbilitiesView DataContext="{Binding AbilitiesVm}" />
+        </StackPanel>
+      </Border>
+      <Border BorderBrush="Gray" BorderThickness="1" Padding="5">
+        <StackPanel>
+          <Button Content="Пропустить Ход" Command="{Binding GameBoardVm.SkipTurnCommand}"
+                  Margin="5" Padding="10" HorizontalAlignment="Center" VerticalAlignment="Center" />
         </StackPanel>
       </Border>
     </StackPanel>
